--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-i18next": "^15.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-toggle-dark-mode": "^1.1.1",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
